Initial approve snd notifiction sqs aws